Fix last table spacing, update Result export

--- a/src/components/TaxReport/_TaxReport.scss
+++ b/src/components/TaxReport/_TaxReport.scss
@@ -9,7 +9,9 @@
   }
 
   .bp3-table-container {
-    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 40px;
+    }  
   }
 
   .movements-table {
